test_scores/negative_dimers/features/P54257.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P54257.pkl.xz